--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Assignment1"
         tools:targetApi="31">
+        <activity android:name=".HighscoreActivity" />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAwCgKaY3qWtwSh6HG2l-iqk9nI83Pne4c" />
 
         <!-- MenuActivity is now the launcher -->
         <activity
